tests/error/private.gw
#! [contains] can't access private
class C { private var int i;  }

var C c;
<<< c.i >>>;
